# agent-tdd-ai

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/codex/prompts/: fix-tests.md
.github/workflows/: ci.yml  test-and-codex.yml  test-and-openai.yml
app/: main.py
scripts/: codex-fix-tests.sh
tests/: test_api.py
